# cpp_katas

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.cpp  calc.hpp
src/fizzbuzz/: CMakeLists.txt  fizzbuzz.cpp  fizzbuzz.hpp
src/fromroman/: CMakeLists.txt  fromroman.cpp  fromroman.hpp
tests/: CMakeLists.txt
tests/testCalc/: CMakeLists.txt  testCalc.cpp
tests/testFizzBuzz/: CMakeLists.txt  testFizzBuzz.cpp
tests/testFromRoman/: CMakeLists.txt  testFromRoman.cpp
